fixed alignment of edit info

--- a/css/houseinfoedit.css
+++ b/css/houseinfoedit.css
@@ -38,7 +38,20 @@ h1 {
 
 #house_images {
     margin: auto;
-    width: 100%;
+    width: 70%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    padding: 1em;
+}
+
+#house_images label {
+    padding-right: 1em;
+}
+
+#house_images input {
+    padding-top: 0;
 }
 
 #house_info {
@@ -123,8 +136,4 @@ h1 {
     flex-direction: row;
     flex-flow: wrap;
     align-items: flex-end;
-}
-
-#house_images input {
-    padding: 1em 0;
 }
